RESOLVED FIXED279431
[GStreamer][WebRTC] framesEncoded stats are incorrect
https://bugs.webkit.org/show_bug.cgi?id=279431
Summary [GStreamer][WebRTC] framesEncoded stats are incorrect
Philippe Normand
Reported 2024-09-10 02:40:56 PDT
.
Attachments
Philippe Normand
Comment 1 2024-09-10 02:43:06 PDT
EWS
Comment 2 2024-09-11 01:03:54 PDT
Committed 283473@main (c92e583a41e1): <https://commits.webkit.org/283473@main> Reviewed commits have been landed. Closing PR #33389 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-11 01:04:49 PDT
Note You need to log in before you can comment on or make changes to this bug.