Cherry-pick 283473@main (c92e583a41e1). https://bugs.webkit.org/show_bug.cgi?id=279431

[GStreamer][WebRTC] framesEncoded stats are incorrect
    https://bugs.webkit.org/show_bug.cgi?id=279431

    Reviewed by Xabier Rodriguez-Calvar.

    The frames were counted from the payloader output, which splits every frame in multiple RTP packets.
    So we have to start counting directly from the encoder output.

    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingVideoSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::RealtimeOutgoingVideoSourceGStreamer):
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::startUpdatingStats):
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::stopUpdatingStats):

    Canonical link: https://commits.webkit.org/283473@main

Canonical link: https://commits.webkit.org/282416.121@webkitglib/2.46